# bytechat

./: .env  .env.example  Caddyfile  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod  go.sum  sample.sql  test.sh
.github/workflows/: tests.yml
backend/: .env  Cargo.toml  Dockerfile  development.md
backend/.sqlx/: query-1a43b657f976c6d39884fab25ad0c0bc1641b79fe4bcb317324286dfb4549b98.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json  query-b92ec84a95ff6d0f5eb0ed0a72a2fcf62fb48169e30216cc9ce6aeb037f18d37.json  query-c6049477b3c7f6024c475ea9b86186e6f89ccf075b998f6ec0906ce37cc5a1e9.json  query-ef6529921d0074443c5283ca1155bd83f7eb3a115872244ecf37022e643228eb.json
backend/migrations/: 20241102073402_init.sql  20241104192951_uuids_for_sessions.sql  20241105112040_init.sql  20241105175105_app_schema.sql  schema.sql
backend/src/: auth.rs  main.rs  messages.rs  rooms.rs  router.rs  routes.rs
backend/src/handlers/: mod.rs
backend/src/state/: mod.rs  tests.rs
backend/src/tests/: mod.rs  test_app_health.rs  test_register_user.rs  test_user_login.rs
backend/tests/: integration_tests.rs
cmd/api/: main.go
cmd/app/: main.go
cmd/web/: dashboard.templ  login.templ
cmd/web/auth/: auth.templ  login.templ  register.templ
cmd/web/chat/: chat.templ  direct_messages.templ  home.templ  navlist.templ  profile.templ
cmd/web/settings/: settings.templ
cmd/web/users/: user_actions.templ  userlist.templ
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/pages/: ChatRoom.tsx  Login.tsx  Logout.tsx  Register.tsx
frontend/src/routes/: ChatPage.tsx  Login.tsx  Messages.tsx  Register.tsx
internal/database/: messages.sql.go  models.go  rooms.sql.go  sessions.sql.go  users.sql.go
internal/server/: auth.go  chat.go  helpers.go  middleware.go  routes.go  server.go  settings.go  users.go
internal/server/sql/: 003_seed_public_rooms.sql
internal/server/sql/queries/: messages.sql  rooms.sql  sessions.sql  users.sql
internal/server/sql/schema/: 001_schema.sql  002_seed_roles.sql  004_functions.sql
migrations/: 0001_create_messages_table.sql  0001_init.sql
src/: main.rs  state.rs  templates.rs
src/handlers/: mod.rs
src/state/: mod.rs
templates/: base.html
