[package]
name = "bytechat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.4", features = ["ws"]}
chrono = { version = "0.4", features = ["serde"] }
password-auth = "1.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.28.2"
tower-cookies = "0.10.0"
