[package]
name = "bytechat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = {version = "0.7.4", features = ["macros", "time", "chrono", "migrate"]}
tokio = {version = "1.37.0", features = ["full"]}
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
socketioxide = { version = "0.13.1", features = ["state"] }
dotenv = "0.15.0"
